autometrics/tests/compilation/error_locus/fail/report_original_line.stderr
error[E0596]: cannot borrow `contents` as mutable, as it is not declared as mutable
  --> tests/compilation/error_locus/fail/report_original_line.rs:10:5
   |
10 |     contents.push(2);
   |     ^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
8  |     let mut contents: Vec<u32> = Vec::new();
   |         +++
